# har-oa3-converter

./: .bazelrc  .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .windsurfrules  BUILD  CONTRIBUTING.md  Dockerfile  README.md  WORKSPACE  brew.sh  codecov.yml  debug_tests.py  output.xyz  pyproject.toml  pyproject.toml.bak  pytest.ini  run_tests_with_reports.sh  sample.har  setup_pyenv.sh  tox.ini
.github/workflows/: code-quality.yml  coverage-report.yml  docs.yml  publish.yml  python-compatibility.yml  python-package.yml  python-tests.yml
bazel/: BUILD  build.sh  publish.sh
docker-reports/api-tests/json/: report.json
docker-reports/json/: report.json
docs/: ci_cd_pipeline.md
docs/source/: api.rst  cli.rst  conf.py  development.rst  index.rst  installation.rst  modules.rst  schemas.rst  usage.rst
docs/source/modules/: api.rst  cli.rst  converter.rst  converters.rst  schemas.rst  utils.rst
har_oa3_converter/: __init__.py  cli.py  converter.py  format_cli.py  format_converter.py
har_oa3_converter/api/: __init__.py  models.py  routes.py  server.py
har_oa3_converter/cli/: __init__.py  format_cli.py  har_to_oas_cli.py
har_oa3_converter/converters/: __init__.py  file_handler_integration.py  format_converter.py  format_registry.py  har_to_oas3.py  new_schema_validator.py  schema_validator.py
har_oa3_converter/converters/formats/: __init__.py  base.py  har_to_openapi3.py  hoppscotch_to_openapi3.py  openapi3_to_openapi3.py  openapi3_to_swagger.py  postman_to_har.py  postman_to_openapi3.py
har_oa3_converter/models/: telemetry.py
har_oa3_converter/schemas/: __init__.py  hoppscotch_schema.json  json_schemas.py  telemetry_config.json
har_oa3_converter/tools/: radon_runner.py
har_oa3_converter/utils/: __init__.py  file_handler.py  logging.py  telemetry.py
scripts/: build_docker.sh  check_coverage.sh  fix_pylint_issues.py  generate_coverage_badge.py  publish.sh  run_api_tests_in_docker.sh  run_tests_in_docker.sh  run_tests_in_docker_tmp.sh  setup_rancher_desktop.sh  verify_docker_for_testing.sh
tests/: conftest.py  debug_exception_handling.py  test_api_error_handling.py  test_cli.py  test_cli_coverage.py  test_cli_main.py  test_converter.py  test_error_handlers.py  test_exception_handling.py  test_format_cli.py  test_format_converter.py  test_main_cli.py  test_readme_examples.py  test_root_cli.py  test_root_level_cli.py
tests/api/: conftest.py  schemathesis_schema.py  test_accept_headers.py  test_additional_api_coverage.py  test_api_compatibility.py  test_api_endpoints.py  test_content_negotiation.py  test_headers_validation.py  test_models.py  test_routes.py  test_routes_api_coverage.py  test_routes_coverage.py  test_routes_error_coverage.py  test_routes_error_handling.py  test_schema_compatibility.py  test_schema_fixed.py  test_schemathesis.py  test_server.py
tests/cli/: test_cli.py  test_format_cli.py  test_format_cli_coverage.py  test_har_to_oas_cli.py  test_main_cli.py
tests/converters/: test_file_handler_integration.py  test_format_cli_assertions.py  test_format_converter.py  test_format_converter_coverage.py  test_format_converter_edge_cases.py  test_format_converter_schema_coverage.py  test_format_registry.py  test_har_to_oas3.py  test_hoppscotch_coverage.py  test_hoppscotch_to_openapi3.py  test_json_decode_errors.py  test_new_schema_validator.py  test_postman_converters.py  test_postman_to_har_converter.py  test_schema_validator.py
tests/converters/formats/: test_base.py  test_har_to_openapi3.py  test_openapi3_to_openapi3.py
tests/coverage/: analyze_coverage.py  test_edge_cases.py  test_error_conditions.py  test_error_handling_routes.py  test_format_content_matrix.py  test_internal_methods.py  test_rare_conditions.py
tests/docker/: __init__.py  docker_utils.py  test_docker_api.py  test_docker_functionality.py  test_docker_schema_validation.py
tests/fixtures/: petstore_openapi3.json
tests/models/: test_telemetry.py
tests/utils/: test_file_handler.py  test_logging.py  test_telemetry.py
